# ma_eval_space

./: .gitignore  Cargo.toml  README.MD  mph_sizes.txt  paper.tex  smaller_tables.txt  stats.txt  stats_hashmap_size.txt  stats_mphf_size.txt  stats_uniform.txt  storage.txt  update-branches.sh
src/: bench.rs  main.rs  tmp
