[package]
name = "space_measure"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stats_alloc = {git = "https://github.com/Tockra/stats_alloc.git"}
ma_titan = { path = "../ma_titan/" }
boomphf = {git = "https://github.com/Tockra/rust-boomphf"}
uint = { git = "https://github.com/Tockra/uint.git" }
serde = "1.0.99"
rmp-serde = "0.13.7"
rand = "0.7.0"
rand_pcg = "0.2.0"
rustc-hash = "1.0.1"
