[package]
name = "space_measure"
version = "0.1.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stats_alloc = { git = "https://github.com/Tockra/stats_alloc.git" }
ma_titan = { git = "https://github.com/Tockra/ma_titan.git", branch="threshold_u64_1" }
uint = { git = "https://github.com/Tockra/uint.git" }
treez = {git = "https://github.com/Tockra/treez.git"}
num = "0.2.0"